--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "andersonls/zpl",
   "type": "library",
+  "version": "0.0.3",
   "description": " This library is a php wrapper for the ZPL Programming Language.",
   "keywords": ["zpl", "php-wrapper"],
   "minimum-stability": "dev",
